--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -24,7 +24,23 @@
     </div>
     <div class="mb-3">
         <label for="properties" class="form-label">Properties</label>
-        <textarea name="content" class="form-control" id="properties" rows="15"></textarea>
+        <textarea name="content" class="form-control" id="properties" rows="15">
+bootstrap.servers=ip:host
+key.serializer=org.apache.kafka.common.serialization.StringSerializer
+value.serializer=org.apache.kafka.common.serialization.StringSerializer
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+security.protocol=SASL_PLAINTEXT
+sasl.mechanism=SCRAM-SHA-512
+receive.buffer.bytes=65536
+auto.offset.reset=latest
+enable.auto.commit=true
+sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="username" password="password";
+request.required.acks=0
+serializer.class=kafka.serializer.StringEncoder
+producer.type=async
+metadata.fetch.timeout.ms=200
+        </textarea>
     </div>
     <div class="mb-3">
         <button id="sendButton" type="submit" class="btn btn-primary">Create</button>
